fixed text wrapping issue

--- a/frontend/src/components/WorkoutView/WorkoutView.css
+++ b/frontend/src/components/WorkoutView/WorkoutView.css
@@ -28,6 +28,7 @@
 
 .list-item {
     font-size: 0.97em;
+    white-space: 'nowrap';
 }
 
 .workout {
